--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-	"name": "angular-song-rate",
-	"version": "0.0.4",
-	"devDependencies": {
-		"grunt": "~0.4.5",
-		"grunt-cli": "~0.1.13",
-		"grunt-html2js": "~0.2.7",
-		"grunt-contrib-uglify": "~0.5.0",
-		"grunt-contrib-less": "~0.11.2",
-		"grunt-contrib-clean": "~0.5.0",
-		"grunt-contrib-connect": "~0.8.0",
-		"grunt-contrib-compress": "~0.9.1",
-		"grunt-contrib-concat": "~0.4.0",
-		"grunt-contrib-jshint": "~0.10.0",
-		"grunt-contrib-watch": "~0.6.1",
-		"grunt-bower-task": "~0.3.4",
-		"grunt-karma": "~0.8.0",
-		"karma": "~0.12.0",
-		"karma-jasmine": "~0.1.0",
-		"karma-phantomjs-launcher": "~0.1.4",
-		"karma-ng-html2js-preprocessor": "~0.1.0",
-		"karma-junit-reporter": "~0.2.2",
-		"karma-coverage": "~0.2.6"
-	}
+  "name": "angular-song-rate",
+  "version": "0.0.4",
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-cli": "~0.1.13",
+    "grunt-html2js": "~0.3.5",
+    "grunt-contrib-uglify": "~0.11.0",
+    "grunt-contrib-less": "~1.1.0",
+    "grunt-contrib-clean": "~0.7.0",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-compress": "~0.14.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-bower-task": "~0.4.0",
+    "grunt-karma": "~0.12.1",
+    "karma": "~0.13.16",
+    "karma-jasmine": "~0.3.6",
+    "karma-phantomjs-launcher": "~0.2.2",
+    "karma-ng-html2js-preprocessor": "~0.2.0",
+    "karma-junit-reporter": "~0.3.8",
+    "karma-coverage": "~0.5.3"
+  },
+  "dependencies": {
+    "bower": "^1.7.1"
+  }
 }
