--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "0.0.4",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-bower-task": "~0.4.0",
     "grunt-cli": "~0.1.13",
-    "grunt-html2js": "~0.3.5",
-    "grunt-contrib-uglify": "~0.11.0",
-    "grunt-contrib-less": "~1.1.0",
     "grunt-contrib-clean": "~0.7.0",
-    "grunt-contrib-connect": "~0.11.2",
     "grunt-contrib-compress": "~0.14.0",
     "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.11.2",
     "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-less": "~1.1.0",
+    "grunt-contrib-uglify": "~0.11.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-bower-task": "~0.4.0",
+    "grunt-html2js": "~0.3.5",
     "grunt-karma": "~0.12.1",
+    "jasmine-core": "^2.4.1",
     "karma": "~0.13.16",
+    "karma-coverage": "~0.5.3",
     "karma-jasmine": "~0.3.6",
-    "karma-phantomjs-launcher": "~0.2.2",
-    "karma-ng-html2js-preprocessor": "~0.2.0",
     "karma-junit-reporter": "~0.3.8",
-    "karma-coverage": "~0.5.3"
+    "karma-ng-html2js-preprocessor": "~0.2.0",
+    "karma-phantomjs-launcher": "~0.2.2"
   },
   "dependencies": {
     "bower": "^1.7.1"
